    {#} Missing built-in skip features from slftp.skip added (#195)
    {#} Saving TVInfo for some shows containing ' in its name (#191, #196)
    {#} Double free of TNukeQueueItem (#203)
    {#} !batch looses sites in bnctest output over time (#216)
    {#} !prelist parameter count (#212)
    {#} Wrong mp3genre detected on IRC announce (#114)
    {#} !raw command timeout/error handling (#225)
    {^} Requests can be filled from sites without checking the routes. (#168)
    {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
    {^} [MKDIR Denied] msg shows path with denied releasename.
    {^} !autoinvite warns you if no IRCNick is specified for the site.
    {^} !maxupperrip can show actual value now.
    {^} !findaffil has improved irc output.
    {^} backup on startup will only be executed after sites.dat has been successfully decrypted. (#169)
    {^} !leechers code improved.
    {^} Support for regex in IMDb Language rule
    {^} Detection for iOFTPD sites
    {^} IMDb parsing code update due to recent website changes
    {^} taskdirlist shows sitename on 'can not dirlist' announce (#227)
    {^} !indexquery search count is selectable (#188)
    {^} Skip lookup of extra infos for skipped groups (#218)
    {-} TheTVDB support as API goes offline [on October 1st, 2017] some day (#175)
    {-} !sectionins command -> edit slftp.precatcher manually! (#157)
    {-} Support for older FPC compilers (at least version 3.2.0 needed!)

--=============================( SLFTP v1.5.5 )===================================-
  ** NOTE: FROM NOW ON YOU HAVE TO USE THE MAKEFILE ON LINUX AND THE MAKE.BAT ON WINDOWS **

    {+} FastMM4 memory manager (https://github.com/pleriche/FastMM4)
    {+} Partial use of Faster Regex Engine FLRE (https://github.com/BeRo1985/flre) (much faster!!!)
    {+} New dirlist Code including:
        - Changed filesize variables to use Int64 instead of Integer