@@ -87,6 +87,7 @@
     {#} !prelist parameter count (#212)
     {#} Wrong mp3genre detected on IRC announce (#114)
     {#} !raw command timeout/error handling (#225)
+    {#} !slots command didn't supported showing of siteslots for all sites (#230)
     {^} Requests can be filled from sites without checking the routes. (#168)
     {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
     {^} [MKDIR Denied] msg shows path with denied releasename.
